tests/expectations/parser/type_/signature_verify_bad_syntax_fail.out
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found 'signature'
    --> test:3:23
     |
   3 |         let a: bool = signature.verify(s, a, v);
     |                       ^^^^^^^^^
Error [EPAR0370005]: expected ';' -- found ','
    --> test:3:41
     |
   3 |         let a: bool = signature.verify(s, a, v);
     |                                         ^
Error [EPAR0370005]: expected ')' -- found ','
    --> test:4:17
     |
   4 |         assert(a, b);
     |                 ^
Error [EPAR0370047]: expected parameter name
    --> test:12:12
     |
  12 |     fn foo(signature: field) -> u8 {
     |            ^^^^^^^^^
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'fn', 'final', 'const', 'mapping', 'storage', 'script', 'interface' -- found ':'
    --> test:12:21
     |
  12 |     fn foo(signature: field) -> u8 {
     |                     ^
Error [EPAR0370047]: expected function name
    --> test:16:8
     |
  16 |     fn signature(foo: field) -> u8 {
     |        ^^^^^^^^^
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'fn', 'final', 'const', 'mapping', 'storage', 'script', 'interface' -- found '('
    --> test:16:17
     |
  16 |     fn signature(foo: field) -> u8 {
     |                 ^
Error [EPAR0370021]: The type of `s` has no associated function `verify` that takes 3 argument(s).
    --> test:8:23
     |
   8 |         let b: bool = s.verify(a, a, v);
     |                       ^^^^^^^^^^^^^^^^^
